--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>by.training.nc.dev5</groupId>
   <artifactId>nc-training</artifactId>
@@ -8,7 +8,8 @@
   <name>nc-training</name>
   <url>http://maven.apache.org</url>
   <modules>
-	<module>DAO</module>  
+	<module>DAO</module>
+    <module>AV-Clinic</module>
   </modules>
   <dependencies>
     <dependency>
