--- a/AA-Testing/pom.xml
+++ b/AA-Testing/pom.xml
@@ -7,7 +7,6 @@
     <artifactId>nc-training</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <groupId>by.training.nc.dev5</groupId>
   <artifactId>AA-Testing</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>AA-Testing</name>
@@ -20,4 +19,22 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.3</version>
+          <configuration>
+              <source>1.8</source>
+              <target>1.8</target>
+          </configuration>
+      </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>2.5</version>
+        </plugin>
+    </plugins>
+  </build>
 </project>
