--- a/AA-Testing/pom.xml
+++ b/AA-Testing/pom.xml
@@ -18,6 +18,19 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+      <!-- MySQL database driver -->
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.41</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+      <dependency>
+          <groupId>commons-dbcp</groupId>
+          <artifactId>commons-dbcp</artifactId>
+          <version>1.2.2</version>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
