--- a/AV-Clinic/src/main/resources/mysql.properties
+++ b/AV-Clinic/src/main/resources/mysql.properties
@@ -1,4 +1,5 @@
-driverClassName=com.mysql.jdbc.Driver
-connectionUrl=jdbc:mysql://localhost:3306/av-clinic
+url=jdbc:mysql://localhost:3306/av-clinic?autoReconnect=true&useSSL=false
+characterEncoding=UTF-8
+driver=com.mysql.jdbc.Driver
 user=root
 password=toor
