--- a/NA-DevelopersTeam/pom.xml
+++ b/NA-DevelopersTeam/pom.xml
@@ -14,6 +14,8 @@
     <version>1.0-SNAPSHOT</version>
     <name>NA-DevelopersTeam</name>
 
+    <packaging>jar</packaging>
+
     <url>http://maven.apache.org</url>
 
     <dependencies>
