--- a/AA-Testing/pom.xml
+++ b/AA-Testing/pom.xml
@@ -31,6 +31,17 @@
           <artifactId>commons-dbcp</artifactId>
           <version>1.2.2</version>
       </dependency>
+      <!--log4j-->
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-api</artifactId>
+          <version>2.8.1</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <version>2.8.1</version>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
