--- a/AV-WebApp-Clinic/pom.xml
+++ b/AV-WebApp-Clinic/pom.xml
@@ -36,6 +36,11 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.41</version>
     </dependency>
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>AV-WebApp-Clinic</finalName>
