--- a/AV-WebApp-Clinic/src/main/resources/configs.properties
+++ b/AV-WebApp-Clinic/src/main/resources/configs.properties
@@ -6,13 +6,8 @@ path.page.registration=/jsp/registration.jsp
 path.page.error=/jsp/error/error.jsp
 
 path.page.doctor=/jsp/doctor/main.jsp
-path.page.client.balance=/jsp/client/balance.jsp
-path.page.client.payment=/jsp/client/payment.jsp
-path.page.client.addfunds=/jsp/client/addfunds.jsp
-path.page.client.block=/jsp/client/block.jsp
-
+path.page.doctor.patients=/jsp/doctor/patients.jsp
+path.page.doctor.innermenu=/jsp/doctor/innermenu.jsp
 path.page.nurse=/jsp/nurse/main.jsp
-path.page.admin.clients=/jsp/admin/clients.jsp
-path.page.admin.operations=/jsp/admin/operations.jsp
-path.page.admin.unblock=/jsp/admin/unblock.jsp
+
 ##############################
