Unit 3 Task 3 in progress

--- a/AV-WebApp-Clinic/src/main/resources/configs.properties
+++ b/AV-WebApp-Clinic/src/main/resources/configs.properties
@@ -8,6 +8,11 @@ path.page.error=/jsp/error/error.jsp
 path.page.doctor=/jsp/doctor/main.jsp
 path.page.doctor.patients=/jsp/doctor/patients.jsp
 path.page.doctor.innermenu=/jsp/doctor/innermenu.jsp
+path.page.doctor.add.patient=/jsp/doctor/add/patient.jsp
+path.page.doctor.add.diagnosis=/jsp/doctor/add/diagnosis.jsp
+path.page.doctor.add.drug=/jsp/doctor/add/drug.jsp
+path.page.doctor.add.procedure=/jsp/doctor/add/procedure.jsp
+path.page.doctor.add.surgery=/jsp/doctor/add/surgery.jsp
 path.page.nurse=/jsp/nurse/main.jsp
 
 ##############################
