--- a/AA-WebApp-Testing/pom.xml
+++ b/AA-WebApp-Testing/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>AA-WebApp-Testing</finalName>
