--- a/NK-WebApp-Payment/src/main/webapp/WEB-INF/web.xml
+++ b/NK-WebApp-Payment/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,10 @@
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
   <display-name>Archetype Created Web Application</display-name>
   <servlet>
     <servlet-name>Controller</servlet-name>
@@ -12,4 +15,12 @@
     <servlet-name>Controller</servlet-name>
     <url-pattern>/controller</url-pattern>
   </servlet-mapping>
+  <filter>
+    <filter-name>MyFilter</filter-name>
+    <filter-class>by.training.nc.dev5.filters.MyFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>MyFilter</filter-name>
+    <servlet-name>Controller</servlet-name>
+  </filter-mapping>
 </web-app>
