--- a/AV-WebApp-Clinic/src/main/resources/configs.properties
+++ b/AV-WebApp-Clinic/src/main/resources/configs.properties
@@ -9,8 +9,7 @@ path.page.doctorandnurse.drugs=/jsp/doctorandnurse/drugs.jsp
 path.page.doctorandnurse.procedures=/jsp/doctorandnurse/procedures.jsp
 path.page.doctorandnurse.patients=/jsp/doctorandnurse/patients.jsp
 
-path.page.doctor=/jsp/doctor/main.jsp
-path.page.doctor.innermenu=/jsp/doctor/innermenu.jsp
+path.page.doctor.menu=/jsp/doctor/menu.jsp
 path.page.doctor.add.patient=/jsp/doctor/add/patient.jsp
 path.page.doctor.add.diagnosis=/jsp/doctor/add/diagnosis.jsp
 path.page.doctor.add.drug=/jsp/doctor/add/drug.jsp
@@ -19,7 +18,6 @@ path.page.doctor.add.surgery=/jsp/doctor/add/surgery.jsp
 path.page.doctor.delete.diagnosises=/jsp/doctor/delete/diagnosises.jsp
 path.page.doctor.delete.surgeries=/jsp/doctor/delete/surgeries.jsp
 
-path.page.nurse=/jsp/nurse/main.jsp
-path.page.nurse.innermenu=/jsp/nurse/innermenu.jsp
+path.page.nurse.menu=/jsp/nurse/menu.jsp
 
 ##############################
