--- a/AV-WebApp-Clinic/pom.xml
+++ b/AV-WebApp-Clinic/pom.xml
@@ -41,6 +41,16 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>4.3.0.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate.javax.persistence</groupId>
+      <artifactId>hibernate-jpa-2.1-api</artifactId>
+      <version>1.0.0.Final</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>AV-WebApp-Clinic</finalName>
