--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>by.training.nc.dev5</groupId>
     <artifactId>nc-training</artifactId>
@@ -23,7 +22,8 @@
         <module>SO-WebApp-shop</module>
         <module>AV-WebApp-Clinic</module>
         <module>NK-WebApp-Payment</module>
-    </modules>
+    <module>NA-WebApp-DevelopersTeam</module>
+  </modules>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
