--- a/NA-WebApp-DevelopersTeam/src/main/webapp/WEB-INF/web.xml
+++ b/NA-WebApp-DevelopersTeam/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,56 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<web-app
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xmlns="http://java.sun.com/xml/ns/javaee"
+        xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+        id="NA-WebApp-DevelopersTeam"
+        version="3.0">
+    <display-name>Archetype Created Web Application</display-name>
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+    <filter>
+        <filter-name>SecurityFilter</filter-name>
+        <filter-class>by.training.nc.dev5.web.filter.SecurityFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>SecurityFilter</filter-name>
+        <url-pattern>/customer/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>SecurityFilter</filter-name>
+        <url-pattern>/developer/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>SecurityFilter</filter-name>
+        <url-pattern>/manager/*</url-pattern>
+    </filter-mapping>
+
+    <servlet>
+        <servlet-name>controller</servlet-name>
+        <servlet-class>by.training.nc.dev5.web.servlet.Controller</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>controller</servlet-name>
+        <url-pattern>/controller</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>controller</servlet-name>
+        <url-pattern>/customer/controller</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>controller</servlet-name>
+        <url-pattern>/manager/controller</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>controller</servlet-name>
+        <url-pattern>/developer/controller</url-pattern>
+    </servlet-mapping>
+
+    <error-page>
+        <exception-type>by.training.nc.dev5.exception.DataAccessException</exception-type>
+        <location>/jsp/error.jsp</location>
+    </error-page>
+    
+    <jsp-config>
+    </jsp-config>
 </web-app>
