Added routing mechanism and some error pages

--- a/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
+++ b/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
@@ -1,6 +1,11 @@
 path.page.index                     =/index.jsp
 path.page.login                     =/jsp/login.jsp
-path.page.error                     =/jsp/error.jsp
+
+##############################
+##       error pages        ##
+##############################
+path.page.error.internal            =/jsp/error/internal-error.html
+path.page.error.notFound            =/jsp/error/not-found-error.html
 
 ##############################
 ##      customer pages      ##
