--- a/NA-WebApp-DevelopersTeam/src/main/webapp/WEB-INF/web.xml
+++ b/NA-WebApp-DevelopersTeam/src/main/webapp/WEB-INF/web.xml
@@ -47,10 +47,12 @@
     </servlet-mapping>
 
     <error-page>
-        <exception-type>by.training.nc.dev5.exception.DataAccessException</exception-type>
-        <location>/jsp/error.jsp</location>
+        <error-code>404</error-code>
+        <location>/jsp/error/not-found-error.html</location>
     </error-page>
-    
-    <jsp-config>
-    </jsp-config>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/jsp/error/internal-error.html</location>
+    </error-page>
+
 </web-app>
