Changed navigation mechanism in commands and pages

--- a/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
+++ b/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
@@ -12,7 +12,7 @@ path.page.error.notFound            =/jsp/error/not-found-error.html
 ##############################
 path.page.customer.main             =/jsp/customer/main.jsp
 path.page.customer.createTor        =/jsp/customer/create-tor.jsp
-path.page.customer.showTors         =/jsp/customer/show-my-tors.jsp
+path.page.customer.showMyTors         =/jsp/customer/show-my-tors.jsp
 
 ##############################
 path.page.manager.main              =/jsp/manager/main.jsp
