Minimal view of unassigned developers.
Changed mechanism of viewing of possible qualifications (moved
corresponding method to HelpService), provided navigating through
unassigned developers, yet without assigning function itself.

--- a/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
+++ b/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
@@ -17,6 +17,7 @@ path.page.customer.showMyTors         =/jsp/customer/show-my-tors.jsp
 ##############################
 path.page.manager.main              =/jsp/manager/main.jsp
 path.page.manager.showPendingTors   =/jsp/manager/show-pending-tors.jsp
+path.page.manager.assignDevelopers  =/jsp/manager/assign-developers.jsp
 
 ##############################
 path.page.developer.main            =/jsp/developer/main.jsp
