--- a/AV-WebApp-Clinic/pom.xml
+++ b/AV-WebApp-Clinic/pom.xml
@@ -6,6 +6,9 @@
   <artifactId>AV-WebApp-Clinic</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
+  <properties>
+    <spring.version>4.2.4.RELEASE</spring.version>
+  </properties>
   <name>AV-WebApp-Clinic Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -51,6 +54,19 @@
       <artifactId>hibernate-jpa-2.1-api</artifactId>
       <version>1.0.0.Final</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>AV-WebApp-Clinic</finalName>
