--- a/AV-WebApp-Clinic/src/main/resources/configs.properties
+++ b/AV-WebApp-Clinic/src/main/resources/configs.properties
@@ -2,18 +2,18 @@
 ## Application configuration ##
 ###############################
 path.page.index=/index.jsp
-path.page.registration=/jsp/registration.jsp
-path.page.error=/jsp/error/error.jsp
+path.page.registration=/WEB-INF/view/registration.jsp
+path.page.error=/WEB-INF/view/errors/error.jsp
 
-path.page.doctorandnurse.patients=/jsp/doctorandnurse/patients.jsp
+path.page.doctorandnurse.patients=/WEB-INF/view/doctorandnurse/patients.jsp
 
-path.page.doctor.menu=/jsp/doctor/menu.jsp
-path.page.doctor.add.patient=/jsp/doctor/add/patient.jsp
-path.page.doctor.add.diagnosis=/jsp/doctor/add/diagnosis.jsp
-path.page.doctor.add.drug=/jsp/doctor/add/drug.jsp
-path.page.doctor.add.medprocedure=/jsp/doctor/add/medprocedure.jsp
-path.page.doctor.add.surgery=/jsp/doctor/add/surgery.jsp
+path.page.doctor.menu=/WEB-INF/view/doctor/menu.jsp
+path.page.doctor.add.patient=/WEB-INF/view/doctor/add/patient.jsp
+path.page.doctor.add.diagnosis=/WEB-INF/view/doctor/add/diagnosis.jsp
+path.page.doctor.add.drug=/WEB-INF/view/doctor/add/drug.jsp
+path.page.doctor.add.medprocedure=/WEB-INF/view/doctor/add/medprocedure.jsp
+path.page.doctor.add.surgery=/WEB-INF/view/doctor/add/surgery.jsp
 
-path.page.nurse.menu=/jsp/nurse/menu.jsp
+path.page.nurse.menu=/WEB-INF/view/nurse/menu.jsp
 
 ##############################
