Changed routing policy. Updated links within pages.
User interface now will be located on single page which includes other
views. Updated commands so that they correspond new navigation policy.
Added custom taglib declaration to web.xml

--- a/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
+++ b/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
@@ -1,5 +1,6 @@
 path.page.index                     =/index.jsp
 path.page.login                     =/jsp/login.jsp
+path.page.master                    =/jsp/master-page.jsp
 
 ##############################
 ##       error pages        ##
@@ -10,14 +11,17 @@ path.page.error.notFound            =/jsp/error/not-found-error.html
 ##############################
 ##      customer pages      ##
 ##############################
+path.page.customer.sidenav          =/jsp/customer/sidenav.jspf
 path.page.customer.main             =/jsp/customer/main.jsp
 path.page.customer.createTor        =/jsp/customer/create-tor.jsp
-path.page.customer.showMyTors         =/jsp/customer/show-my-tors.jsp
+path.page.customer.showMyTors       =/jsp/customer/show-my-tors.jsp
 
 ##############################
+path.page.manager.sidenav           =/jsp/manager/sidenav.jspf
 path.page.manager.main              =/jsp/manager/main.jsp
 path.page.manager.showPendingTors   =/jsp/manager/show-pending-tors.jsp
 path.page.manager.assignDevelopers  =/jsp/manager/assign-developers.jsp
 
 ##############################
+path.page.developer.sidenav         =/jsp/developer/sidenav.jspf
 path.page.developer.main            =/jsp/developer/main.jsp
