Moved Task DAO to other DAOs, replaced some criteria API calls with JPQL

--- a/NA-WebApp-DevelopersTeam/pom.xml
+++ b/NA-WebApp-DevelopersTeam/pom.xml
@@ -62,7 +62,7 @@
         </dependency>
         <dependency>
             <groupId>by.training.nc.dev5</groupId>
-            <artifactId>NA-DevelopersTeam</artifactId>
+            <artifactId>NA-DevelopersTeam-Hibernate</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
