--- a/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
+++ b/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
@@ -1,6 +1,5 @@
 path.page.index                     =/index.jsp
 path.page.login                     =/jsp/login.jsp
-path.page.master                    =/jsp/master-page.jsp
 
 ##############################
 ##       error pages        ##
@@ -13,13 +12,13 @@ path.page.error.notFound            =/jsp/error/not-found-error.html
 ##############################
 path.page.customer.sidenav          =/jsp/customer/sidenav.jspf
 path.page.customer.main             =/jsp/customer/main.jsp
-path.page.customer.createTor        =/jsp/customer/create-tor.jsp
-path.page.customer.showMyTors       =/jsp/customer/show-my-tors.jsp
+path.page.customer.createTerms        =/jsp/customer/create-terms.jsp
+path.page.customer.showMyTerms       =/jsp/customer/show-my-terms.jsp
 
 ##############################
 path.page.manager.sidenav           =/jsp/manager/sidenav.jspf
 path.page.manager.main              =/jsp/manager/main.jsp
-path.page.manager.showPendingTors   =/jsp/manager/show-pending-tors.jsp
+path.page.manager.showPendingTors   =/jsp/manager/show-pending-terms.jsp
 path.page.manager.assignDevelopers  =/jsp/manager/assign-developers.jsp
 
 ##############################
