Reflected renamed filenames in path.page.properties

--- a/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
+++ b/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
@@ -20,6 +20,7 @@ path.page.manager.sidenav           =/jsp/manager/sidenav.jspf
 path.page.manager.main              =/jsp/manager/main.jsp
 path.page.manager.showPendingTors   =/jsp/manager/show-pending-terms.jsp
 path.page.manager.assignDevelopers  =/jsp/manager/assign-developers.jsp
+path.page.manager.showMyProjects    =/jsp/manager/show-my-projects.jsp
 
 ##############################
 path.page.developer.sidenav         =/jsp/developer/sidenav.jspf
