--- a/AV-WebApp-Clinic/src/main/resources/configs.properties
+++ b/AV-WebApp-Clinic/src/main/resources/configs.properties
@@ -1,19 +1,19 @@
 ###############################
 ## Application configuration ##
 ###############################
-path.page.index=/index.jsp
-path.page.registration=/WEB-INF/views/registration.jsp
-path.page.error=/WEB-INF/views/errors/error.jsp
+path.page.index=/index
+path.page.registration=/registration
+path.page.error=/errors/error
 
-path.page.doctorandnurse.patients=/WEB-INF/views/doctorandnurse/patients.jsp
+path.page.doctorandnurse.patients=/doctorandnurse/patients
 
-path.page.doctor.menu=/WEB-INF/views/doctor/menu.jsp
-path.page.doctor.add.patient=/WEB-INF/views/doctor/add/patient.jsp
-path.page.doctor.add.diagnosis=/WEB-INF/views/doctor/add/diagnosis.jsp
-path.page.doctor.add.drug=/WEB-INF/views/doctor/add/drug.jsp
-path.page.doctor.add.medprocedure=/WEB-INF/views/doctor/add/medprocedure.jsp
-path.page.doctor.add.surgery=/WEB-INF/views/doctor/add/surgery.jsp
+path.page.doctor.menu=/doctor/menu
+path.page.doctor.add.patient=/doctor/add/patient
+path.page.doctor.add.diagnosis=/doctor/add/diagnosis
+path.page.doctor.add.drug=/doctor/add/drug
+path.page.doctor.add.medprocedure=/doctor/add/medprocedure
+path.page.doctor.add.surgery=/doctor/add/surgery
 
-path.page.nurse.menu=/WEB-INF/views/nurse/menu.jsp
+path.page.nurse.menu=/nurse/menu
 
 ##############################
