Added time tracking view

--- a/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
+++ b/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
@@ -23,5 +23,7 @@ path.page.manager.assignDevelopers  =/jsp/manager/assign-developers.jsp
 path.page.manager.showMyProjects    =/jsp/manager/show-my-projects.jsp
 
 ##############################
+##      developer pages     ##
 path.page.developer.sidenav         =/jsp/developer/sidenav.jspf
 path.page.developer.main            =/jsp/developer/main.jsp
+path.page.developer.track           =/jsp/developer/track.jsp
