--- a/AV-WebApp-Clinic/pom.xml
+++ b/AV-WebApp-Clinic/pom.xml
@@ -11,6 +11,7 @@
     <spring.version>4.2.4.RELEASE</spring.version>
     <taglibs.version>1.1.2</taglibs.version>
     <inject.version>1</inject.version>
+    <javaeeapi.version>7.0</javaeeapi.version>
   </properties>
   <name>AV-WebApp-Clinic Maven Webapp</name>
   <url>http://maven.apache.org</url>
@@ -75,7 +76,7 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-web</artifactId>
+      <artifactId>spring-orm</artifactId>
       <version>${spring.version}</version>
     </dependency>
 
