Added issueInvoice.jsp to path

--- a/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
+++ b/NA-WebApp-DevelopersTeam/src/main/resources/path.page.properties
@@ -21,6 +21,7 @@ path.page.manager.main              =/jsp/manager/main.jsp
 path.page.manager.showPendingTors   =/jsp/manager/show-pending-terms.jsp
 path.page.manager.assignDevelopers  =/jsp/manager/assign-developers.jsp
 path.page.manager.showMyProjects    =/jsp/manager/show-my-projects.jsp
+path.page.manager.issueInvoice      =/jsp/manager/issue-invoice.jsp
 
 ##############################
 ##      developer pages     ##
