--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>NK-WebApp-Payment</module>
     <module>NA-WebApp-DevelopersTeam</module>
     <module>NA-DevelopersTeam-Hibernate</module>
+    <module>NA-WebApp-DevelopersTeam-Spring</module>
   </modules>
     <dependencies>
         <dependency>
