--- a/NA-DevelopersTeam-Hibernate/pom.xml
+++ b/NA-DevelopersTeam-Hibernate/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <spring.version>4.2.4.RELEASE</spring.version>
+        <aspectj.version>1.8.4</aspectj.version>
     </properties>
 
     <dependencies>
@@ -53,6 +54,16 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>${aspectj.version}</version>
         </dependency>
     </dependencies>
 </project>
