--- a/NA-WebApp-DevelopersTeam-Spring/pom.xml
+++ b/NA-WebApp-DevelopersTeam-Spring/pom.xml
@@ -23,7 +23,7 @@
         <spring.version>4.2.4.RELEASE</spring.version>
         <servlet.api.version>3.1.0</servlet.api.version>
         <taglibs.version>1.1.2</taglibs.version>
-        <jstl.version>1.2</jstl.version>
+        <jstl.version>1.2-rev-1</jstl.version>
     </properties>
 
     <dependencies>
@@ -44,8 +44,8 @@
             <version>${servlet.api.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
+            <groupId>javax.servlet.jsp.jstl</groupId>
+            <artifactId>jstl-api</artifactId>
             <version>${jstl.version}</version>
         </dependency>
         <dependency>
