--- a/NA-WebApp-DevelopersTeam-Spring/pom.xml
+++ b/NA-WebApp-DevelopersTeam-Spring/pom.xml
@@ -24,6 +24,7 @@
         <servlet.api.version>3.1.0</servlet.api.version>
         <taglibs.version>1.1.2</taglibs.version>
         <jstl.version>1.2-rev-1</jstl.version>
+        <spring.security.version>4.0.3.RELEASE</spring.security.version>
     </properties>
 
     <dependencies>
@@ -62,6 +63,21 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>${spring.security.version}</version>
         </dependency>
         <dependency>
             <groupId>taglibs</groupId>
