--- a/NA-WebApp-DevelopersTeam-Spring/src/main/webapp/WEB-INF/web.xml
+++ b/NA-WebApp-DevelopersTeam-Spring/src/main/webapp/WEB-INF/web.xml
@@ -20,12 +20,21 @@
             org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter
         </filter-class>
     </filter>
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy
+        </filter-class>
+    </filter>
 
     <filter-mapping>
         <filter-name>jpaFilter</filter-name>
         <url-pattern>*</url-pattern>
     </filter-mapping>
-    
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
