--- a/NA-DevelopersTeam-Hibernate/pom.xml
+++ b/NA-DevelopersTeam-Hibernate/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <spring.version>4.2.4.RELEASE</spring.version>
         <aspectj.version>1.8.4</aspectj.version>
+        <cglib.version>3.2.5</cglib.version>
     </properties>
 
     <dependencies>
@@ -47,6 +48,11 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
         </dependency>
@@ -64,6 +70,11 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
             <version>${aspectj.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>${cglib.version}</version>
         </dependency>
     </dependencies>
 </project>
